@@ -1,7 +1,7 @@
 #! /bin/sh -e
 
 # grub-mkconfig helper script.
-# Copyright (C) 2008  Free Software Foundation, Inc.
+# Copyright (C) 2008,2009  Free Software Foundation, Inc.
 #
 # GRUB is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -20,6 +20,11 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 . ${libdir}/grub/grub-mkconfig_lib
+
+case "${GRUB_DISTRIBUTOR}" in
+  Debian)	OS="${GRUB_DISTRIBUTOR} GNU/kFreeBSD" ;;
+  *)		OS="FreeBSD" ;;
+esac
 
 if test -e /boot/devices.hints ; then
   devices=/boot/devices.hints
@@ -51,7 +56,7 @@ if [ "x$kfreebsd" != "x" ] ; then
   kfreebsd_fs=${GRUB_FS}
 
   cat << EOF
-menuentry "FreeBSD" {
+menuentry "${OS}" {
 EOF
   prepare_grub_to_access_device ${GRUB_DEVICE_BOOT} | sed -e "s/^/\t/"
   cat << EOF
